--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.27.2",
     "jwt-decode": "^4.0.0",
     "next": "12.2.3",
+    "next-themes": "^0.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
