--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "next": "12.2.3",
     "next-themes": "^0.4.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
